# dm-user-registration

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  domain.py  logging_config.py  main.py
app/api/: dependencies.py
app/api/v1/: models.py
app/api/v1/routes/: users.py
app/db/: __init__.py  pool.py
app/db/repositories/: activation_codes.py  users.py
app/services/registration/: __init__.py  exceptions.py  interfaces.py  service.py
migrations/: 0001_create_users_and_activation_codes.down.sql  0001_create_users_and_activation_codes.up.sql
scripts/: entrypoint.sh  migrate.py
tests/: conftest.py  fakes.py  test_registration_api.py
